tests/ui/issues/issue-26093.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-26093.rs:3:16
   |
LL |         $thing = 42;
   |                ^
...
LL |     not_a_place!(99);
   |     ----------------
   |     |            |
   |     |            cannot assign to this expression
   |     in this macro invocation
   |
   = note: this error originates in the macro `not_a_place` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0067]: invalid left-hand side of assignment
  --> $DIR/issue-26093.rs:5:16
   |
LL |         $thing += 42;
   |                ^^
...
LL |     not_a_place!(99);
   |     ----------------
   |     |            |
   |     |            cannot assign to this expression
   |     in this macro invocation
   |
   = note: this error originates in the macro `not_a_place` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0067, E0070.
For more information about an error, try `rustc --explain E0067`.
